Fixes #3, overflow issue
Fixed issue with images overflowing on product card. Added border to emphasis the outline of the card.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,26 @@
 /* import fonts */
 
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Karla:wght@400;600&family=Work+Sans:wght@600;700&display=swap');
+
+
+
 html,body
 {
     width: 100%;
     height: 100%;
     overflow-x: hidden; 
-    background-color: #fbfcff;
+    background-color: #FFFFFF;
 
 }
 
 body {
 
-  font-family: 'Alata', sans-serif;
   font-family: 'Karla', sans-serif;
 
 }
 
 /* mobile styling for smallest screens */
+
 /* Free shipping container */
 .fs-div {
 
@@ -32,7 +35,7 @@ body {
 
   padding-top: 10px;
   text-align: center;
-  font-size: 1rem;
+  font-size: 16px;
 
   }
 
@@ -224,6 +227,7 @@ padding: 15px;
   .product-imgs {
 
     width: 250px;
+    margin-top: 1.5rem;
     
   }
 
@@ -258,45 +262,47 @@ padding: 15px;
   .card {
     width: 300px;
     border-radius: 15px;
-    border: none;
+    border: 1px solid rgba(191, 191, 191, 0.282);
     margin-left: 2rem;
     margin-right: 2rem;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .2)
+    box-shadow: 1px 10px 20px rgba(0, 0, 0, .2)
   }
   
 
   .card-title {
   
-    margin-top: 0.5rem;
     color: #708665;
     font-weight: bolder;
     font-size: 1rem;
     font-family: 'Work Sans', sans-serif;
+    font-size: 22px;
   
   }
   
-  .card-title small {
-  
-    font-size: 1rem;
-    font-family: 'Karla', sans-serif;
+  .product-region {
+ 
+    font-family: 'Work Sans', sans-serif;
+    font-weight: lighter;
+    font-size: 16px;
   
   }
   
   .card-body {
+
     position: relative;
-    bottom: 35px
+    height: 555px;
+
   }
   
   .cart-btn {
   
     background-color: #708665;
-    border-radius: 2px;
     padding: 0.6rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    border: none;
     color: #FFF;
     font-size: 0.9rem;
-    letter-spacing: 1px;
     margin-top: 1rem;
   
   }
